<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_title"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_content_description"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/txtPhone"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edtPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_weight="0.5"
            android:hint="@string/edtPhoneHint"
            android:autofillHints="@string/autofillHints"
            android:textSize="25sp">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btnSOS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginTop="15dp"
        android:textSize="35sp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"/>

</LinearLayout>
